Fixed some Suits, Sparky is now a suit and new trash can type!